force-app/main/default/objects/ProfileToFeatureAccess__c/ProfileToFeatureAccess__c.object-meta.xml
<CustomObject>
    <label>ProfileToFeatureAccess</label>
    <nameField>
        <displayFormat>PFA-{00000}</displayFormat>
        <label>ProfileToFeatureAccess Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProfileToFeatureAccess</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>