force-app/main/default/objects/ProfileToFeatureAccess__c/fields/Edit_Access__c.field-meta.xml
<CustomField>
    <fullName>Edit_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit Access</label>
    <type>Checkbox</type>
</CustomField>