force-app/main/default/objects/ProfileToFeatureAccess__c/fields/FeaturesList__c.field-meta.xml
<CustomField>
    <fullName>FeaturesList__c</fullName>
    <description>List of all the features like buttons,  links,  pages which we want to control through code [where Sharing rules, field level security or profile access can&apos;t be used]</description>
    <label>FeaturesList</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Call</fullName>
            </value>
            <value>
                <fullName>Presales Call</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Enquiry Received</fullName>
            </value>
            <value>
                <fullName>VDNB Call</fullName>
            </value>
            <value>
                <fullName>HWC</fullName>
            </value>
            <value>
                <fullName>CRM Call</fullName>
            </value>
            <value>
                <fullName>Home Loan Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>