force-app/main/default/objects/ProfileToFeatureAccess__c/fields/ProfileList__c.field-meta.xml
<CustomField>
    <fullName>ProfileList__c</fullName>
    <description>List of all profiles in the org. Since we cant have a lookup to profile obj, new profiles if added needs to be manually updated in the drop down</description>
    <label>ProfileList</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Director Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>NRI Vertical</fullName>
            </value>
            <value>
                <fullName>Outsourced Presales</fullName>
            </value>
            <value>
                <fullName>Pre Sales Executive</fullName>
            </value>
            <value>
                <fullName>Pre Sales Manager</fullName>
            </value>
            <value>
                <fullName>Pre Sales Manager/Marketing</fullName>
            </value>
            <value>
                <fullName>Receptionist</fullName>
            </value>
            <value>
                <fullName>Relationship Manager</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Sales MIS &amp; Operation</fullName>
            </value>
            <value>
                <fullName>Sales Strategy</fullName>
            </value>
            <value>
                <fullName>Sales - TL</fullName>
            </value>
            <value>
                <fullName>Site Head</fullName>
            </value>
            <value>
                <fullName>System Admin Clone</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Team Leader</fullName>
            </value>
            <value>
                <fullName>Outsourced Sales Execs</fullName>
            </value>
            <value>
                <fullName>NRI Sales Manager</fullName>
            </value>
            <value>
                <fullName>Anarock Team</fullName>
            </value>
            <value>
                <fullName>MIS2</fullName>
            </value>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Loyalty Callers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>