force-app/main/default/objects/ProfileToFeatureAccess__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FeaturesList__c</columns>
    <columns>ProfileList__c</columns>
    <columns>Feature_Accessible__c</columns>
    <columns>Edit_Access__c</columns>
    <columns>Single_User_Access_Exception__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>